--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-react": "^7.25.2",
+    "node-sass": "^9.0.0"
   },
   "browserslist": {
     "production": [
